# ufbx-rust

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  justfile  sfs-deps.json  sfs.py
.github/: codecov.yml
.github/workflows/: ci.yml  test.yml
bindgen/: generate_rust.py  ufbx_ir.py
misc/: test_coverage.sh  update_version.py
src/: generated.rs  impl_mint.rs  lib.rs  prelude.rs
tests/: animation.rs  common.rs  dom.rs  geometry.rs  load.rs  misc.rs  subdivision.rs  test_files.rs
ufbx/: prelude.c  prelude.h  ufbx.c  ufbx.h
