[package]
name = "ufbx"
version = "0.2.0"
authors = ["bqqbarbhg <bqqbarbhg@gmail.com>"]
edition = "2018"
description = "Bindings for ufbx"
license = "MIT OR PDDL-1.0"
homepage = "https://github.com/ufbx/ufbx-rust"
repository = "https://github.com/ufbx/ufbx-rust"
build = "build.rs"
include = [
    "build.rs",
    "src/*",
    "ufbx/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1.0"
